--- a/package.json
+++ b/package.json
@@ -2,13 +2,25 @@
   "name": "my-frontend",
   "version": "0.1.0",
   "private": true,
+  "proxy": "http://127.0.0.1:5050",
   "dependencies": {
+    "@chakra-ui/react": "^2.6.1",
+    "@emotion/react": "^11.11.0",
+    "@emotion/styled": "^11.11.0",
+    "@react-icons/all-files": "^4.1.0",
     "@testing-library/jest-dom": "^5.16.5",
     "@testing-library/react": "^13.4.0",
     "@testing-library/user-event": "^13.5.0",
+    "axios": "^1.4.0",
+    "framer-motion": "^10.12.16",
     "react": "^18.2.0",
     "react-dom": "^18.2.0",
+    "react-icons": "^4.9.0",
+    "react-notification-badge": "^1.5.1",
+    "react-router-dom": "^5.3.4",
     "react-scripts": "5.0.1",
+    "react-scrollable-feed": "^1.3.2",
+    "socket.io-client": "^4.6.2",
     "web-vitals": "^2.1.4"
   },
   "scripts": {
